--- a/src/components/common/Tag.module.scss
+++ b/src/components/common/Tag.module.scss
@@ -10,4 +10,6 @@
   background: $templates-panel;
   color: $templates-muted;
   border: 1px solid rgba(255, 255, 255, 0.1);
+  white-space: nowrap;
+  flex-shrink: 1;
 }
