--- a/src/components/pages/DesktopNew/Template/styles.module.scss
+++ b/src/components/pages/DesktopNew/Template/styles.module.scss
@@ -1,6 +1,18 @@
 @import "/src/styles/variables";
 @import "~bootstrap/scss/mixins";
 
+.scrolled {
+  margin-top: 94px !important;
+
+  @include media-breakpoint-down(lg) {
+    margin-top: 60px !important;
+  }
+
+  @include media-breakpoint-down(md) {
+    margin-top: var(--spacer-4) !important;
+  }
+}
+
 .template {
   display: flex;
   min-height: calc(100vh - 200px);
@@ -8,15 +20,7 @@
   overflow-y: auto;
   position: relative;
   background-color: var(--primary-black);
-  background-image:
-    linear-gradient(
-      to bottom,
-      transparent 40%,
-      rgba(0, 0, 0, 0) 40%,
-      rgba(0, 0, 0, 0) 80%,
-      transparent 80%
-    ),
-    url("/images/new-desktop.png");
+  background-image: url("/images/desktop-bg.webp");
   background-size: 100% 80%;
   background-position: top center;
   background-repeat: no-repeat;
@@ -48,25 +52,20 @@
 }
 
 .container {
-  max-width: 1280px !important;
-  padding: 0px;
   display: flex;
   justify-content: space-between;
   gap: 24px;
-  margin-top: 126px;
-  margin-bottom: 40px;
-
-  @include media-breakpoint-down(xlg) {
-    padding: 0px 20px;
-  }
+  margin-top: 184px;
+  margin-bottom: var(--spacer-8);
 
   @include media-breakpoint-down(lg) {
     flex-direction: column;
-    margin-top: 80px;
+    margin-top: 150px;
     padding: 0px 40px;
   }
 
   @include media-breakpoint-down(md) {
+    margin-top: 122px;
     padding: 0px 24px;
   }
 }
@@ -75,6 +74,11 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  padding-right: var(--spacer-4);
+
+  @include media-breakpoint-down(lg) {
+    padding-right: 0px;
+  }
 }
 
 .heading {
@@ -93,22 +97,21 @@
 
 .imageContainer {
   @include media-breakpoint-down(lg) {
-    display: none;
+    display: flex;
+    justify-content: center;
   }
 }
 
 .imageHero {
-  margin-top: 48px;
   object-fit: contain;
   width: 100%;
   height: auto;
-  max-width: 680px;
-  max-height: 442px;
+  max-width: 648px;
+  max-height: 480px;
 }
 
 .right {
   max-width: 500px;
-  min-width: 500px;
   height: fit-content;
   padding: 40px;
   display: flex;
@@ -124,27 +127,10 @@
   }
 }
 
-.content {
-  height: 100%;
-  width: 100%;
-  display: flex;
-}
-
 .form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   height: fit-content;
   width: 100%;
-  h4 {
-    font-size: 32px !important;
-  }
-  h6 {
-    font-size: 18px !important;
-  }
-  @include media-breakpoint-down(md) {
-    h4 {
-      font-size: 24px !important;
-    }
-  }
 }
