--- a/src/components/pages/DesktopNew/Template/styles.module.scss
+++ b/src/components/pages/DesktopNew/Template/styles.module.scss
@@ -51,21 +51,30 @@
   }
 }
 
+.margin {
+  margin-top: 184px !important;
+
+  @include media-breakpoint-down(lg) {
+    margin-top: 150px !important;
+  }
+
+  @include media-breakpoint-down(md) {
+    margin-top: 122px !important;
+  }
+}
+
 .container {
   display: flex;
   justify-content: space-between;
   gap: 24px;
-  margin-top: 184px;
-  margin-bottom: var(--spacer-8);
+  margin-bottom: var(--spacer-8) !important;
 
   @include media-breakpoint-down(lg) {
     flex-direction: column;
-    margin-top: 150px;
     padding: 0px 40px;
   }
 
   @include media-breakpoint-down(md) {
-    margin-top: 122px;
     padding: 0px 24px;
   }
 }
