--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -3,23 +3,42 @@ main.layout {
   display: flex;
   flex-direction: column;
 }
+
 body:has(.layout) {
   background-color: var(--primary-black);
   color: var(--primary-white);
 }
 
+.container-new {
+  @include make-container(48px);
+  margin: 0px auto;
+  max-width: 1440px;
+  padding: 0px 80px;
+
+  @media (max-width: 1350px) {
+    max-width: 100%;
+  }
+
+  @media (max-width: 1224px) {
+    padding: 0px 60px;
+  }
+}
+
 .container-wide {
   @include make-container(48px);
-  max-width: 1300px; 
+  max-width: 1300px;
+  padding: 0px 80px;
+
   @include media-breakpoint-down(xxll) {
     max-width: 1180px;
   }
+
   @include media-breakpoint-down(xl) {
     max-width: 100%;
   }
+
   @include media-breakpoint-down(mlg) {
     max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0px 20px;
   }
 }
