--- a/src/components/ui/DownloadForm/styles.module.scss
+++ b/src/components/ui/DownloadForm/styles.module.scss
@@ -4,65 +4,24 @@
 .list {
   display: flex;
   flex-direction: column;
-  min-width: 100%;
+  gap: 20px;
+  width: 100%;
   margin-top: 12px;
-
-  .label {
-    margin: 4px 0px 13px;
-    font-size: 13px !important;
-  }
-
-  select {
-    border-radius: 4px;
-    border: 1px solid var(--interface-dark-gray-250);
-    color: var(--primary-white);
-    font-family: var(--font-body) !important;
-    font-size: 14px !important;
-    background: url('data:image/svg+xml,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="white" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/></svg>');
-    background-position: right 12px center;
-    background-repeat: no-repeat;
-    line-height: 1.5;
-    outline-offset: 0;
-    padding: 0.5rem 0.75rem;
-    height: 48px;
-    width: 100%;
-    font-weight: 400;
-    padding: 0px 12px;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    margin-bottom: var(--spacer-4);
-
-    &:focus,
-    &:focus-visible {
-      outline: none !important;
-      border-color: var(--interface-blue-200);
-    }
-
-    &:disabled {
-      background: var(--interface-light-gray-100);
-      border-color: var(--interface-light-gray-100);
-    }
-  }
 }
 
 .listItem {
   width: 100%;
   display: flex;
+  gap: 18px;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  padding-bottom: var(--spacer-3);
+  padding-bottom: 24px;
   border-bottom: 1px solid #374151;
 }
 
 .listItem:last-child {
   padding-bottom: 0px;
   border-bottom: none;
-}
-
-.listItem:not(first-child) {
-  padding-top: 20px;
 }
 
 .detailsItem {
@@ -74,14 +33,14 @@
 .itemName {
   flex: 1;
   color: var(--primary-white);
-  font-size: 18px !important;
+  font-size: 18px;
   line-height: 130%;
   letter-spacing: 0.18px;
 }
 
 .comingSoon {
   color: var(--primary-white);
-  font-size: 1rem !important;
+  font-size: 16px !important;
   transform: skew(-10deg);
   opacity: 0.5;
 }
@@ -91,13 +50,9 @@
 }
 
 .downloadButton {
-  width: 109px;
-  height: 39px;
+  width: 115px;
+  height: fit-content;
   border-radius: 8px;
-  font-size: 1rem !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background: linear-gradient(
     to right,
     rgb(134, 239, 172),
@@ -117,7 +72,7 @@
   &:hover {
     animation: waveGradient 5s ease-in-out infinite;
   }
-  padding: 0px 16px;
+  padding: 10px 16px;
   cursor: pointer;
   a {
     text-decoration: none;
